--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 690px;
+    min-height: 722px;
     display: grid;
     grid-template-columns: fit-content(150px, 1fr);
 
@@ -30,39 +30,69 @@ body {
 }
 
 .introduction h1 {
-    font-size: 10rem;
+    font-size: 11rem;
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
-    letter-spacing: -3px;
+    letter-spacing: -4.0px;
+    margin-top: 450px;
     color: var(--light);
-    display: flex; 
+    display: flex;
     flex-direction: row;
-    justify-content: bottom; 
+    margin-left: 250px;
     
+}
+
+@media(min-width: 468px) {
+    #main-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .left-box {
+        flex-wrap: wrap;
+
+    }
+
+    .right-box {
+        flex-wrap: wrap;
+
+    }
 }
 
 #main-content {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr 1fr;
-    
-}
-
-#main-content .left-box {
     display: flex;
     flex-direction: row;
+    height: 450px;
+    align-items: flex-start;
 
 }
 
-#main-content .right-box {
+.left-box {
     display: flex;
-    flex-direction: column;
-    font-family: serif; 
-    justify-content: space-around;
-
+    flex-grow: 2;
+    flex-basis: 15%;
+    justify-content: center;
+    margin-top: 5em;
 }
 
-#main-content .right-box h2 {
+.left-box h4 {
+    font-family: 'Arapey', serif;
+}
+
+.right-box {
+    display: flex;
+    flex-grow: 3;
+    flex-basis: 50%;
+    margin-top: 5em;
+}
+
+.right-box h2 {
     font-size: 2.5rem;
 
+}
+
+.right-box p {
+    margin-top: 3em;
+    font-size: 1.5em;
+    font-family: 'Arapey', serif;
 }
