--- a/css/style.css
+++ b/css/style.css
@@ -77,17 +77,18 @@ body {
 
 .left-box h4 {
     font-family: 'Arapey', serif;
+    font-weight: bold;
 }
 
 .right-box {
     display: flex;
     flex-grow: 3;
-    flex-basis: 50%;
+    flex-basis: 30%;
     margin-top: 5em;
 }
 
 .right-box h2 {
-    font-size: 2.5rem;
+    font-size: 4.5rem;
 
 }
 
