--- a/css/style.css
+++ b/css/style.css
@@ -42,27 +42,11 @@ body {
     
 }
 
-@media(min-width: 768px) {
-    #main-content {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .left-box {
-        flex-wrap: wrap;
-
-    }
-
-    .right-box {
-        flex-wrap: wrap;
-
-    }
-}
 
 #main-content {
     display: flex;
     flex-direction: row;
-    height: 450px;
+    height: 42em;
     align-items: flex-start;
 
 }
@@ -72,7 +56,7 @@ body {
     flex-grow: 2;
     flex-basis: 15%;
     justify-content: center;
-    margin-top: 5em;
+    margin-top: 10em;
 }
 
 .left-box h4 {
@@ -84,7 +68,8 @@ body {
     display: flex;
     flex-grow: 3;
     flex-basis: 30%;
-    margin-top: 5em;
+    margin-top: 10em;
+    flex-wrap: wrap;
 }
 
 .right-box h2 {
@@ -97,3 +82,5 @@ body {
     font-size: 1.5em;
     font-family: 'Arapey', serif;
 }
+
+/* MEDIA QUERIES */
