--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,16 @@ body {
     max-width: auto;
 }
 
+p {
+    font-family: 'Arapey', serif;
+}
+
+h4 {
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
+
 .introduction {
     background-image: url("../img/brooklyn.jpg");
     background-repeat: no-repeat;
@@ -57,11 +67,6 @@ body {
     padding-top: 2em;
 }
 
-.left-box h4 {
-    font-family: 'Arapey', serif;
-    font-weight: bold;
-}
-
 
 .right-box {
     display: flex;
@@ -69,6 +74,7 @@ body {
     flex-wrap: wrap; 
     flex-flow: column; 
     margin-top: 10em;
+    grid-column: span 2; 
 }
 
 .right-box h2 {
@@ -79,7 +85,6 @@ body {
 .right-box p {
     margin-top: 3em;
     font-size: 1.5em;
-    font-family: 'Arapey', serif;
 }
 
 
@@ -88,15 +93,27 @@ body {
     height: auto !important; 
 }
 
-#branding {
+#team-content {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-gap: 1rem; 
-    height: auto;
-    width: 100%; 
-    margin-bottom: 10rem; 
-
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    background: #000000;
+    color: #fff;
 }
+
+.story {
+    display: flex;
+    flex-flow: row; 
+    flex-wrap: wrap; 
+    justify-content: center; 
+    width: 100%;
+    height: 100%;
+}
+
+.story h2 {
+    font-family: sans-serif;
+    align-items: flex-start;
+}
+
 /* MEDIA QUERIES */
 
 @media (max-width: 830px) {
