--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+/* GLOBAL STYLES */
 :root{
     --light: #fff; 
 }
 
 html {
     border-style: border-box;
+
+}
+
+html, body {
+    overflow-x: hidden; 
 }
 
 body {
@@ -19,15 +25,17 @@ h4 {
     font-weight: bold;
 }
 
+/* BODY */ 
 
 .introduction {
     background-image: url("../img/brooklyn.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover !important;
     background-position: center;
-    min-height: 722px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    flex: 0 0 auto; 
 
 
 }
@@ -39,7 +47,6 @@ h4 {
     letter-spacing: -4.0px;
     margin-top: 450px;
     color: var(--light);
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin-left: 250px;
@@ -53,8 +60,7 @@ h4 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 1rem; 
-    height: auto;
-    width: 100%; 
+    width: 80%; 
     margin-bottom: 10rem; 
 }
 
@@ -74,11 +80,10 @@ h4 {
     flex-wrap: wrap; 
     flex-flow: column; 
     margin-top: 10em;
-    grid-column: span 2; 
 }
 
 .right-box h2 {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
 
 }
 
@@ -144,6 +149,31 @@ h4 {
     .right-box h2 {
         font-size: 2.5rem;
     
+    }
+
+
+    
+
+}
+
+@media (max-width: 990px) {
+    .introduction {
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 1; 
+        margin: 0 auto;
+
+    
+    
+    }
+    
+    .introduction h1 {
+        font-size: 7rem !important;
+        text-align: left; 
+        flex-shrink: 1; 
+        flex-wrap: wrap;
+
+        
     }
 
 }
