--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,8 @@
     --light: #fff; 
 }
 
-html {
-    border-style: border-box;
-
+* {
+    box-sizing: border-box;
 }
 
 html, body {
@@ -35,7 +34,8 @@ h4 {
     display: flex;
     flex-direction: row;
     align-self: center;
-    flex: 0 0 auto; 
+    flex: 0 0 auto;
+    flex-basis: 70%;  
 
 
 }
@@ -62,6 +62,7 @@ h4 {
     grid-gap: 1rem; 
     width: 80%; 
     margin-bottom: 10rem; 
+    align-content: stretch; 
 }
 
 .left-box {
@@ -96,28 +97,49 @@ h4 {
 #video video {
     width: 100% !important;
     height: auto !important; 
+    
 }
 
 #team-content {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-gap: 1rem;
     background: #000000;
+    font-size: 80%;
     color: #fff;
+    height: 35rem; 
 }
 
 .story {
     display: flex;
-    flex-flow: row; 
+    flex-flow: column; 
     flex-wrap: wrap; 
     justify-content: center; 
-    width: 100%;
-    height: 100%;
+    align-items: center;
 }
 
-.story h2 {
-    font-family: sans-serif;
-    align-items: flex-start;
+.venn-diagram {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: wrap; 
+    align-items: center;
 }
+
+.venn-diagram img {
+    min-width: 400px;
+    max-height: 400px;
+}
+
+
+.story h2 {
+    font-family: 'Work Sans', sans-serif;
+    align-items: flex-start;
+    font-size: 40px;
+    font-weight: 900;
+    letter-spacing: 2px;
+    transform: scale(.9, 1);
+
+} 
 
 /* MEDIA QUERIES */
 
