--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ p {
 h4 {
     font-family: sans-serif;
     font-weight: bold;
+    font-size: 1rem; 
 }
 
 /* BODY */ 
@@ -59,7 +60,6 @@ h4 {
 #main-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-gap: 1rem; 
     width: 80%; 
     margin-bottom: 10rem; 
     align-content: stretch; 
@@ -105,17 +105,43 @@ h4 {
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     grid-gap: 1rem;
     background: #000000;
-    font-size: 80%;
     color: #fff;
-    height: 35rem; 
+    height: 125vh; 
 }
 
 .story {
     display: flex;
-    flex-flow: column; 
-    flex-wrap: wrap; 
-    justify-content: center; 
-    align-items: center;
+}
+
+.story-container {
+    flex-basis: 80%;
+    padding-top: 100px;
+    padding-left: 100px;
+    margin-left: 120px;
+}
+
+.story-container h2 {
+    font-family: 'Montserrat', sans-serif;
+    align-items: flex-start;
+    font-size: 40px;
+    font-weight: 900;
+    letter-spacing: 2px;
+    margin-top: 2rem;
+
+} 
+
+.story-container h4 {
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
+.story-container p {
+    font-family: 'Arapey', serif;
+    font-size: 1.4rem;
+    justify-content: center;
+    column-count: 2;
+    flex-wrap: wrap;
+    margin-top: 2rem;
 }
 
 .venn-diagram {
@@ -129,17 +155,6 @@ h4 {
     min-width: 400px;
     max-height: 400px;
 }
-
-
-.story h2 {
-    font-family: 'Work Sans', sans-serif;
-    align-items: flex-start;
-    font-size: 40px;
-    font-weight: 900;
-    letter-spacing: 2px;
-    transform: scale(.9, 1);
-
-} 
 
 /* MEDIA QUERIES */
 
