--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ p {
     font-family: 'Arapey', serif;
 }
 
-h4 {
-    font-family: sans-serif;
+h4, h2 {
+    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 1rem; 
 }
@@ -81,10 +81,14 @@ h4 {
     flex-wrap: wrap; 
     flex-flow: column; 
     margin-top: 10em;
+
 }
 
 .right-box h2 {
     font-size: 3.5rem;
+    font-family: 'Arapey', serif;
+    font-weight: lighter;
+
 
 }
 
@@ -106,7 +110,7 @@ h4 {
     grid-gap: 1rem;
     background: #000000;
     color: #fff;
-    height: 125vh; 
+    min-height: 125vh; 
 }
 
 .story {
@@ -114,10 +118,10 @@ h4 {
 }
 
 .story-container {
-    flex-basis: 80%;
     padding-top: 100px;
     padding-left: 100px;
     margin-left: 120px;
+    flex: 1 1 auto; 
 }
 
 .story-container h2 {
@@ -126,7 +130,7 @@ h4 {
     font-size: 40px;
     font-weight: 900;
     letter-spacing: 2px;
-    margin-top: 2rem;
+    margin-top: 2.6rem;
 
 } 
 
@@ -141,22 +145,65 @@ h4 {
     justify-content: center;
     column-count: 2;
     flex-wrap: wrap;
-    margin-top: 2rem;
+    margin-top: 2.6rem;
 }
 
 .venn-diagram {
     display: flex;
     flex-flow: column;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+    flex: 1 1 auto; 
 }
 
 .venn-diagram img {
     min-width: 400px;
     max-height: 400px;
+    margin-top: 8rem; 
 }
 
+#branding {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1rem;
+    background: #000000;
+    color: #fff;
+    padding-top: 10rem; 
+    padding-left: 12rem; 
+
+}
+
+
+#branding h2 {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+#branding li {
+    list-style: none;
+    padding: 2rem;
+    font-size: 1.2rem;
+    
+}
+
+#branding a {
+    text-decoration: none; 
+    color: #fff; 
+}
+
+#list-one, #list-two, #list-three {
+    display: flex;
+    flex-flow: column; 
+}
 /* MEDIA QUERIES */
+
+@media (max-width: 1021px) {
+    .story-container {
+        margin: 0; 
+
+    }
+}
+
 
 @media (max-width: 830px) {
     .left-box {
@@ -187,11 +234,8 @@ h4 {
         font-size: 2.5rem;
     
     }
-
-
-    
-
 }
+
 
 @media (max-width: 990px) {
     .introduction {
@@ -212,5 +256,7 @@ h4 {
 
         
     }
+
+}
 
 }
