--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;  
+}
+
 html, body {
     overflow-x: hidden; 
 }
@@ -42,16 +46,16 @@ h4, h2 {
 }
 
 .introduction h1 {
-    font-size: 11rem !important;
+    font-size: 18.5rem !important;
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
-    letter-spacing: -4.0px;
-    margin-top: 450px;
+    letter-spacing: -.4rem;
+    margin-top: 45rem;
     color: var(--light);
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: 250px;
-    padding-bottom: 5rem; 
+    margin-left: 25rem;
+    padding-bottom: 8rem;
     
 }
 
@@ -117,12 +121,12 @@ h4, h2 {
 
 .story-container {
     display: flex; 
-    padding-top: 100px;
+    padding-top: 10rem;
     /* padding-left: 100px; */
-    margin-left: 120px;
+    margin-left: 12rem;
     column-count: 2;
     width: 100%;
-    max-height: 580px;
+    max-height: 58rem;
     align-items: flex-start;
     flex-direction: column;
     flex-wrap: wrap;
@@ -132,9 +136,9 @@ h4, h2 {
 .story-container h2 {
     font-family: 'Montserrat', sans-serif;
     align-items: flex-start;
-    font-size: 40px;
+    font-size: 4rem;
     font-weight: 900;
-    letter-spacing: 2px;
+    letter-spacing: .2rem; 
     margin-top: 2.6rem;
 
 } 
@@ -146,7 +150,7 @@ h4, h2 {
 .story-container h4 {
     font-family: sans-serif;
     font-weight: bold;
-    max-width: 500px;
+    max-width: 50rem;
 }
 
 .story-container p {
@@ -166,8 +170,8 @@ h4, h2 {
 }
 
 .venn-diagram img {
-    min-width: 400px;
-    max-height: 400px;
+    min-width: 40rem;
+    max-height: 40rem;
     margin-top: 8rem; 
 }
 
@@ -222,7 +226,7 @@ h4, h2 {
         flex-wrap: wrap; 
         justify-content: left; 
         flex-shrink: 1; 
-        flex-basis: 200px; 
+        flex-basis: 20rem; 
 
     }
 
@@ -233,7 +237,7 @@ h4, h2 {
         flex-wrap: wrap; 
         flex-flow: column; 
         flex-shrink: 1; 
-        flex-basis: 200px; 
+        flex-basis: 20rem;  
 
 
         
@@ -266,7 +270,5 @@ h4, h2 {
 
         
     }
-
-}
 
 }
