--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
 // ABSTRACTS
 
-@import "abstracts/functions";
-@import "abstracts/mixins";
-@import "abstracts/variables"; 
+@import "abstract/functions";
+@import "abstract/mixins";
+@import "abstract/variables"; 
 
 // BASE
 
@@ -12,7 +12,7 @@
 @import "base/utilities";  
 
 // PAGES
-@import "pages/home"; 
+@import "pages/about"; 
 
 // LAYOUT 
 @import "layout/cssgrids"; 
