--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,3 +3,21 @@
     font-family: 'Roboto', sans-serif; 
     text-align: center; 
 }
+
+.section-about {
+    &--right {
+
+    }
+}
+
+.heading-secondary {
+    font-size: 7rem; 
+    font-family: 'Arapey', serif;
+    font-weight: lighter; 
+
+
+}
+
+.paragraph {
+    font-size: 2.2rem; 
+}
