--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -1,19 +1,18 @@
 .header {
     background-image: url("../img/brooklyn.jpg"); 
     background-size: cover; 
-    background-position: top;
-    min-height: 95vh; 
+    background-position: center;
+    min-height: 80vh; 
     position: relative; 
     overflow: hidden; 
 
-    &__text-box {
-        position: absolute; 
-        top: 35rem; 
-        left: 25rem; 
-    }
 
 }
 
 .heading-primary {
     color: $color-white; 
+}
+
+.section-about {
+    min-height: 70vh; 
 }
