--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -11,8 +11,17 @@
 
 .heading-primary {
     color: $color-white; 
+    margin-top: 28rem; 
 }
 
 .section-about {
     min-height: 70vh; 
+}
+
+.heading-quaternary {
+    padding: 6.3rem; 
+}
+
+.h2-section {
+    padding: 10rem; 
 }
