--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,9 +10,9 @@ html {
 
 body {
     font-family: 'Arapey', sans-serif;   
-    line-height: 1.3; 
     color: $color-black;  
     font-size: 1.6rem; 
+    line-height: 1.6; 
     box-sizing: border-box; 
 }
 
@@ -21,3 +21,18 @@ h4, h2 {
     font-weight: bold;
 }
 
+p {
+    font-size: 2.3rem; 
+}
+
+.users {
+    &__img {
+            max-width: 100%;
+            height: auto; 
+            padding: 0;
+            margin: 0; 
+            display: block; 
+        }
+        
+    
+}
