--- a/sass/layout/_cssgrids.scss
+++ b/sass/layout/_cssgrids.scss
@@ -2,3 +2,17 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
 }
+
+.how {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    align-items: center; 
+    background: $color-black; 
+    color: $color-white; 
+
+    &__content {
+        grid-row: 1 / 4; 
+
+    }
+
+}
