--- a/sass/layout/_flexbox.scss
+++ b/sass/layout/_flexbox.scss
@@ -32,3 +32,17 @@
 
     }
 }
+
+.how {
+
+
+    &__content {
+        display: flex; 
+        justify-content: center; 
+        align-content: center; 
+        flex-direction: column;
+
+
+    }
+
+}
