--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -7,3 +7,6 @@ $color-pink: #FC0089;
 
 // DEFAULT FONT SIZES
 $default-font-size: 3.4rem;
+
+// CONTAINER PADDING
+$default-container-padding: 15rem; 
