--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -26,8 +26,11 @@ p {
 }
 
 .users {
+    width: 40rem; 
+    max-width: 100%; 
+
     &__img {
-            max-width: 100%;
+            max-width: 100%; 
             height: auto; 
             padding: 0;
             margin: 0; 
