--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -31,3 +31,39 @@
 .h2-section {
     padding: 10rem; 
 }
+
+nav ul a {
+    text-decoration: none; 
+    color: $color-white; 
+}
+
+nav ul a:visited {
+    color: $color-white; 
+}
+
+nav ul a:hover {
+    color: $color-pink; 
+    transition: all .2s; 
+}
+
+
+nav ul a:active {
+    color: $color-white; 
+
+}
+
+.branding {
+
+    &__list {
+        h2 {
+            font-size: 3rem; 
+
+        li {
+            font-size: 2.4rem; 
+        }
+
+    }
+
+}
+
+}
